--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -g")
 add_library(blockcrypt_lib
     src/blockcrypt.cpp
     constants/BlockCryptConstants.cpp
+    src/padding.cpp
 )
 
 target_include_directories(blockcrypt_lib
