refactor(aes): add cell() helper and implement ShiftRows/InvShiftRows per AES standard
- Added private static inline cell() for correct column-major indexing
- Updated shiftRows to rotate rows left by 1/2/3 as defined in the AES spec
- Updated invShiftRows to rotate rows right by 1/2/3 as defined in the AES spec
- Confirmed all AES tests, including NIST vectors and CBC round-trip, pass

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,3 +30,5 @@ enable_testing()
 add_subdirectory(tests)
 add_test(NAME BlockCryptTests COMMAND test_blockcrypt)
 
+add_executable(blockcrypt main.cpp)
+target_link_libraries(blockcrypt PRIVATE blockcrypt_lib)
