perf(benchmark): add AES-128 encrypt 10k-ops per-block latency test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,5 +22,8 @@ jobs:
       - name: Build
         run: cmake --build build -- -j$(nproc)
 
-      - name: Run tests
-        run: ctest --test-dir build --output-on-failure
+      - name: Run unit tests (exclude benchmarks)
+        run: ctest --test-dir build --output-on-failure -E Benchmarks
+
+      - name: Run benchmarks only
+        run: ctest --test-dir build --output-on-failure -R Benchmarks
