--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -26,8 +26,7 @@ add_test(NAME Benchmarks
          COMMAND benchmark_performance -b)
 set_tests_properties(Benchmarks PROPERTIES LABELS "benchmark")
 
-add_test(NAME ECBLatencyBenchmark COMMAND benchmark_performance -b "[ecb][latency]")
-add_test(NAME ECBThroughputBenchmark COMMAND benchmark_performance -b "[ecb][throughput]")
-
-add_test(NAME CBCLatencyBenchmark COMMAND benchmark_performance -b "[cbc][latency]")
-add_test(NAME CBCThroughputBenchmark COMMAND benchmark_performance -b "[cbc][throughput]")
+add_test(NAME ECBLatencyBenchmark COMMAND benchmark_performance "[ecb][latency]")
+add_test(NAME ECBThroughputBenchmark COMMAND benchmark_performance "[ecb][throughput]")
+add_test(NAME CBCLatencyBenchmark COMMAND benchmark_performance "[cbc][latency]")
+add_test(NAME CBCThroughputBenchmark COMMAND benchmark_performance "[cbc][throughput]")
